# changeanalysis-mcp

./: .cursorrules  .gitignore  AGENT_TOOLS.md  CHANGELOG.md  PRODUCTION.md  README.md  TROUBLESHOOTING.md  dev.sh  pyproject.toml  server.py  test_client.py
changeanalysis_mcp/: README_API_EXTENSION.md  __init__.py  client.py  config.py  logging_config.py  services.py
